samples/_failures_safe/1761244204_1fca10_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_58c8b95e.c: In function ‘tokenize’:
./samples/SAFE/__tmp_58c8b95e.c:164:13: error: expected expression at end of input
  164 |             if (state->position < state->length && isOperatorChar(
      |             ^~
./samples/SAFE/__tmp_58c8b95e.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_58c8b95e.c:164:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_58c8b95e.c:164:13: error: expected declaration or statement at end of input
